Fixing overflow

--- a/app/checkout/page.module.css
+++ b/app/checkout/page.module.css
@@ -78,7 +78,7 @@
   flex-direction: column;
   gap: 30px;
 
-  overflow: scroll;
+  overflow: auto;
 }
 
 .button {
