--- a/app/products/[slug]/page.module.css
+++ b/app/products/[slug]/page.module.css
@@ -72,7 +72,7 @@
 
   border-left: 1px solid #ccc;
 
-  overflow: scroll;
+  overflow: auto;
 }
 
 .price {
