--- a/components/products/products-filter.module.css
+++ b/components/products/products-filter.module.css
@@ -75,7 +75,7 @@
     flex-direction: column;
     gap: 30px;
 
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   .mobile-button {
