--- a/components/products/products-hero.module.css
+++ b/components/products/products-hero.module.css
@@ -25,14 +25,9 @@
 .scroll {
   width: 100%;
   height: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
 
   position: relative;
-}
-
-.scroll::-webkit-scrollbar {
-  height: 0px;
-  background: transparent;
 }
 
 .scroll h1 {
